[tool.poetry]
name = "lldcdashboard"
version = "0.1.0"
description = ""
authors = ["Tomas Gonzalez"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.31.1"
pandas = "^2.2.1"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
